# vibe_coding

./: .gitignore  README.md  README_EXTENSION.md  debug_python_startup.py  pyproject.toml
docs/: BACKEND_IMPLEMENTATION.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  IPC_COMMUNICATION_OPTIONS.md  PROJECT_ARCHITECTURE_OPTIONS.md  SOLUTION1_ARCHITECTURE.md
examples/: DEBUG_GUIDE.md  LANGSMITH_SETUP.md  code_assistant_mvp.py  research_agent.py  run_research_agent.py  test_research_agent.py
extension/: .gitignore  .vscodeignore  DEBUG_GUIDE.md  INTEGRATION_STATUS.md  README.md  package.json  pnpm-lock.yaml
extension/python_agents/: DEV_MODE.md  README.md  TEST_REPORT.md  pyproject.toml  test_rpc_communication.py
extension/python_agents/docs/: ARCHITECTURE.md  DEVELOPMENT.md  PACKAGE_MANAGEMENT.md  README.md
extension/python_agents/src/: agent_server.py  studio_agent.py
extension/python_agents/src/agents/: __init__.py  code_agents.py  unified_agent.py
extension/python_agents/src/config/: __init__.py  prompts.py  settings.py
extension/python_agents/src/rpc/: server.py
extension/python_agents/src/tools/: __init__.py  ast_tools.py
extension/python_agents/src/utils/: __init__.py  context_builder.py  llm_client.py  security.py
extension/python_agents/tests/: README.md  quick_test.py  test_chat_simple.py  test_deepagents_implementation.py  test_unified_agent.py
extension/resources/webview/: chat.css  chat.html  chat.js
extension/src/: extension.ts
extension/src/commands/: registerCommands.ts
extension/src/models/: agentTypes.ts  contextTypes.ts  rpcTypes.ts
extension/src/services/: agentBridge.ts  contextService.ts  jsonRpcClient.ts  pythonProcessService.ts
extension/src/ui/: chatPanelProvider.ts  chatViewProvider.ts  contextTreeProvider.ts  diffEditor.ts  historyTreeProvider.ts  notificationManager.ts  progressIndicator.ts  statusBarItem.ts
extension/src/utils/: config.ts  logger.ts
python_agents/: .gitignore  test_communication.py
python_agents/src/: agent_server.py
python_agents/src/rpc/: __init__.py  errors.py  protocol.py
python_agents/src/utils/: logger.py
src/vibe_coding/: __init__.py
