[project]
name = "vibe-coding"
version = "0.1.0"
description = "A deep agent project built with deepagents framework"
readme = "README.md"
authors = [
    { name = "金旭峰", email = "929039704@qq.com" }
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.2.5",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain>=1.0.2,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "wcmatch",
]

[project.scripts]
vibe-coding = "vibe_coding:main"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff>=0.12.2,<0.13.0",
    "mypy>=1.18.1,<1.19.0",
]

dev = [
    "langchain-openai",
    "twine",
    "build",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 150
exclude = []

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "PERF203",
    "SLF001",
    "PLC0415",
    "PLR0913",
    "PLC0414",
    "C901",
]
unfixable = ["B028"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D1",
    "S101",
    "S311",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = ["deprecated"]
disallow_any_generics = false
warn_return_any = false
